--- a/_sass/setup/_variables.scss
+++ b/_sass/setup/_variables.scss
@@ -1,7 +1,7 @@
 // Colours
 $color-grey-darkest: #222;
 
-$color-body-bg: #2c2c2c;
+$color-body-bg: #333;
 $color-body-text: #fff;
 $color-body-link: #ffd42d;
 $color-body-link-hover: #ff2d2d;
