--- a/_sass/core/_reset.scss
+++ b/_sass/core/_reset.scss
@@ -10,16 +10,14 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 
-html, body {
-    min-height: 100%;
-}
-
 html {
     // always make the scroll-bar visible (so no page jump between pages)
+    height: 100%;
     overflow-y: scroll;
 }
 
 body {
+    min-height: 100%;
     padding: 0;
     font-family: $font-body;
 }
