Revert "A little more detail on the homepage"
This reverts commit 8a35b78bec51f3e9d69954e6967453df6c51f10f.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,61 +19,21 @@
     <link href='/styles.css' rel='stylesheet' type='text/css' />
     <link rel="canonical" href="https://www.hammerspace.co.uk/" />
 <body class="homepage">
-<header>
-    <h1 class="header">
-        <a href="/" class="header__link">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1168.43 455.48" class="header__logo">
-                <path d="M0 110.74l43.7-33.63V186h56V33.66L143.5 0v344.75l-43.76 33.66v-151.6h-56v195.05L0 455.48zm185.29 79.53h38.94l28.82 154.6h-31.5l-5.12-32.64h-22.74l-5.34 32.64h-32.26zm27.87 101.54l-8.21-60.31-8.21 60.31zm54.98-101.54h36.65l17 89.89 18.32-89.89h35.32l2.67 154.6h-24.26L350.98 242l-17.94 102.87h-21.61l-19-103.64-2.29 103.64h-24.71zm126.42 0h36.65l17 89.89 18.32-89.89h35.31l2.67 154.6h-24.26L477.43 242l-18 102.87h-21.55L418.8 241.23l-2.29 103.64h-24.63zm124.31 0h69.47v23.28h-35.31v38.37h26.91v23.67h-26.91v46.19h35.69v23.09h-69.85zm82.66 0h42.56q25.38 0 38.36 9t13 31.88q0 15.46-4 24.62T676.54 270l21.18 74.82h-35.29l-17-69.28h-9.73v69.28h-34.17zm43.71 65.66q10.31 0 14.41-5.44t4.1-16.32q0-10.5-3.82-15.75t-13.17-5.25H635.7v42.76zm73.62 79.49q-10.79-11.73-11.55-37.31l29.2-4.39q.19 14.7 3.53 21.09t10 6.39q8.59 0 8.59-11.26a28.34 28.34 0 0 0-4.1-15.46q-4.1-6.48-12.86-13.94l-13.36-11.64q-10.31-9-15.55-17.85t-5.25-22.43q0-19.47 11.55-30t31.78-10.5q21.95 0 29.87 12.79t8.49 31.11l-29.39 3.62q-.39-12-2.2-17.37t-7.92-5.16a7.6 7.6 0 0 0-6.77 3.72 15 15 0 0 0-2.39 8.3q0 8.21 3.72 13.46a76 76 0 0 0 11.18 11.99l12.79 11.26a90.69 90.69 0 0 1 17.75 21q6.3 10.69 6.3 25.39a39.2 39.2 0 0 1-5.08 19.77 36.74 36.74 0 0 1-14.22 14 42.48 42.48 0 0 1-21.19 5.15q-22.14.01-32.92-11.73zm84.69-145.15h51.88q20.42 0 30.54 11.55t10.12 33.31q0 24.81-11.74 34.45t-32.92 9.63h-13.72v65.66h-34.16zm45.62 65.08q9 0 11.93-4.77t3-16q0-10.31-2.86-15.27t-12.21-5h-11.32v41zm69.15-65.08h38.94l28.82 154.6h-31.5l-5.15-32.64h-22.71l-5.34 32.64h-32.26zm27.87 101.54l-8.21-60.31-8.21 60.31zm58.73 42.08q-10.59-13.26-10.59-38.27v-55.73q0-25.57 10.5-38.65t35.88-13.07q24.23 0 34.36 11.64t10.11 33v13.36h-33.4v-15.44q0-9-1.91-13.74t-9.16-4.77q-7.26 0-9.54 5.06t-2.29 14V304q0 9.16 2.39 14t9.45 4.87q7.06 0 9.07-4.87t2-14v-16.2h33.4v13.36q0 21.76-10.11 33.88t-34.36 12.12q-25.21 0-35.8-13.27zm93.66-143.62h69.47v23.28h-35.31v38.37h26.91v23.67h-26.91v46.19h35.69v23.09h-69.85z" class="header__logo-path"></path>
-            </svg>
-            <span class="invisible">Hammerspace</span>
-        </a>
+<div class="homepage__content">
+    <h1>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1168.43 455.48" class="homepage__logo">
+            <path d="M0 110.74l43.7-33.63V186h56V33.66L143.5 0v344.75l-43.76 33.66v-151.6h-56v195.05L0 455.48zm185.29 79.53h38.94l28.82 154.6h-31.5l-5.12-32.64h-22.74l-5.34 32.64h-32.26zm27.87 101.54l-8.21-60.31-8.21 60.31zm54.98-101.54h36.65l17 89.89 18.32-89.89h35.32l2.67 154.6h-24.26L350.98 242l-17.94 102.87h-21.61l-19-103.64-2.29 103.64h-24.71zm126.42 0h36.65l17 89.89 18.32-89.89h35.31l2.67 154.6h-24.26L477.43 242l-18 102.87h-21.55L418.8 241.23l-2.29 103.64h-24.63zm124.31 0h69.47v23.28h-35.31v38.37h26.91v23.67h-26.91v46.19h35.69v23.09h-69.85zm82.66 0h42.56q25.38 0 38.36 9t13 31.88q0 15.46-4 24.62T676.54 270l21.18 74.82h-35.29l-17-69.28h-9.73v69.28h-34.17zm43.71 65.66q10.31 0 14.41-5.44t4.1-16.32q0-10.5-3.82-15.75t-13.17-5.25H635.7v42.76zm73.62 79.49q-10.79-11.73-11.55-37.31l29.2-4.39q.19 14.7 3.53 21.09t10 6.39q8.59 0 8.59-11.26a28.34 28.34 0 0 0-4.1-15.46q-4.1-6.48-12.86-13.94l-13.36-11.64q-10.31-9-15.55-17.85t-5.25-22.43q0-19.47 11.55-30t31.78-10.5q21.95 0 29.87 12.79t8.49 31.11l-29.39 3.62q-.39-12-2.2-17.37t-7.92-5.16a7.6 7.6 0 0 0-6.77 3.72 15 15 0 0 0-2.39 8.3q0 8.21 3.72 13.46a76 76 0 0 0 11.18 11.99l12.79 11.26a90.69 90.69 0 0 1 17.75 21q6.3 10.69 6.3 25.39a39.2 39.2 0 0 1-5.08 19.77 36.74 36.74 0 0 1-14.22 14 42.48 42.48 0 0 1-21.19 5.15q-22.14.01-32.92-11.73zm84.69-145.15h51.88q20.42 0 30.54 11.55t10.12 33.31q0 24.81-11.74 34.45t-32.92 9.63h-13.72v65.66h-34.16zm45.62 65.08q9 0 11.93-4.77t3-16q0-10.31-2.86-15.27t-12.21-5h-11.32v41zm69.15-65.08h38.94l28.82 154.6h-31.5l-5.15-32.64h-22.71l-5.34 32.64h-32.26zm27.87 101.54l-8.21-60.31-8.21 60.31zm58.73 42.08q-10.59-13.26-10.59-38.27v-55.73q0-25.57 10.5-38.65t35.88-13.07q24.23 0 34.36 11.64t10.11 33v13.36h-33.4v-15.44q0-9-1.91-13.74t-9.16-4.77q-7.26 0-9.54 5.06t-2.29 14V304q0 9.16 2.39 14t9.45 4.87q7.06 0 9.07-4.87t2-14v-16.2h33.4v13.36q0 21.76-10.11 33.88t-34.36 12.12q-25.21 0-35.8-13.27zm93.66-143.62h69.47v23.28h-35.31v38.37h26.91v23.67h-26.91v46.19h35.69v23.09h-69.85z" class="logo-path"/>
+        </svg>
+        <span class="hidden">Hammerspace</span>
     </h1>
-</header>
-<main class="homepage__main">
-    <div class="homepage__slice">
-        <h2 class="a homepage__max">Games, tools &amp; tutorials for the web</h2>
-    </div>
-    <div class="homepage__tube">
-        <div class="homepage__tube-inner">
-            <a href="https://tubealert.co.uk" class="homepage__tube-box">
-                <h2>Tube Alert</h2>
-                <p>An open web based tool for received alerts when the tube is down</p>
-                <p>Built using Serverless technology</p>
-            </a>
-        </div>
-    </div>
-    <div class="homepage__cargo">
-        <div class="homepage__cargo-inner">
-            <div class="homepage__cargo-box">
-                <h2>Planet Cargo (coming soon)</h2>
-                <p>An open web based MMO game where you compete to be the first to explore 1000 islands</p>
-                <p>Built using Container technology and Universal Rendering</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="homepage__more">
-        <div class="homepage__more-contents text--prose">
-            <h2>Behind the scenes</h2>
-            <ul>
-                <li><a href="/posts/tube-alert-07-2017">
-                    Building TubeAlert, a Serverless Progressive Web Site with push notifications
-                </a></li>
-            </ul>
-
-            <h2>Enquires</h2>
-            <p class="homepage__enquiries">
-                For all enquiries, please use
-                <a href="mailto:contact@hammerspace.co.uk">contact@hammerspace.co.uk</a>
-            </p>
-        </div>
-    </div>
-</main>
-<footer><div class="footer">
-    <div class="text--right">
-        © Hammerspace LTD | <a href="mailto:contact@hammerspace.co.uk">contact@hammerspace.co.uk</a>
-    </div>
-</div></footer>
+    <p class="homepage__contact">
+        <a href="mailto:contact@hammerspace.co.uk" class="homepage__contact-link">contact@hammerspace.co.uk</a>
+    </p>
+    <p class="homepage__projects">
+        <a href="https://tubealert.co.uk">TubeAlert</a><br />
+        <a href="/posts/tube-alert-07-2017">Building TubeAlert, a Serverless Progressive Web Site with push notifications</a>
+    </p>
+</div>
 {% include ga.html %}
 </body>
 </html>
