--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,10 +29,11 @@
     <p class="homepage__contact">
         <a href="mailto:contact@hammerspace.co.uk" class="homepage__contact-link">contact@hammerspace.co.uk</a>
     </p>
-    <p class="homepage__projects">
-        <a href="https://tubealert.co.uk">TubeAlert</a><br />
-        <a href="/posts/tube-alert-07-2017">Building TubeAlert, a Serverless Progressive Web Site with push notifications</a>
-    </p>
+    <ul class="homepage__projects">
+        <li><a href="https://tubealert.co.uk">TubeAlert</a><br /></li>
+        <li><a href="/posts/effective-todos-12-2019">Writing Effective Todo Comments</a></li>
+        <li><a href="/posts/tube-alert-07-2017">Building TubeAlert, a Serverless Progressive Web Site with push notifications</a></li>
+    </ul>
 </div>
 {% include ga.html %}
 </body>
