--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </div></main>
 <footer><div class="footer">
     <div class="text--right">
-        &copy; hammerspace.co.uk | <a href="mailto:contact@hammerspace.co.uk">contact@hammerspace.co.uk</a>
+        &copy; hammerspace.co.uk
     </div>
 </div></footer>
 {% include ga.html %}
